Update author field

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       "scriptableobjects"
     ],
     "author": {
-      "name": "bgk",
+      "name": "Peartree Games",
       "email": "bgk@peartree.games",
       "url": "https://peartree.games"
     }
